...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency Converter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hq9-2C-xiO" propertyAccessControl="none">
                                <rect key="frame" x="16" y="60" width="218" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="CONVERTOR"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="29" id="SYY-7u-BJv"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0N4-at-U7Q">
                                        <rect key="frame" x="0.0" y="18.5" width="117" height="14.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="UPDATE_TIME"/>
                                        <attributedString key="attributedText">
                                            <fragment content="22 May 2021 7:03 PM">
...
                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="44"/>
                                                <color key="backgroundColor" name="AccentColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BUY_BUTTON"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Button"/>
...
                                                <rect key="frame" x="144.5" y="0.0" width="111.5" height="44"/>
                                                <color key="backgroundColor" name="AccentColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SELL_BUTTON"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Sell">
                                                            <attributes>
                                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="0.00" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ObD-Ym-LpB">
                                                <rect key="frame" x="114" y="0.0" width="142" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BASE_CURRENCY_TEXT_FIELD"/>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="0.00" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VR8-fy-MUO">
                                                <rect key="frame" x="111" y="0.0" width="145" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="FIRST_EXCHANGE_CURRENCY_TEXT_FIELD"/>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="0.00" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dWz-Qi-t0t">
                                                <rect key="frame" x="113" y="0.0" width="143" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SECOND_EXCHANGE_CURRENCY_TEXT_FIELD"/>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cb6-Oa-DHb">
                                                <rect key="frame" x="28" y="0.0" width="118.5" height="33.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ADD_CURRENCY_BUTTON"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain">
...
                                        <rect key="frame" x="250" y="284.5" width="22" height="23"/>
                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SHARE_BUTTON"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="22" id="DhI-e6-Jzq"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Currencies" id="Ciy-Uh-Pme">
                        <barButtonItem key="backBarButtonItem" title="Convertor" id="o12-8n-dIG"/>
                    </navigationItem>
...
