...
        searchController.isActive && !isSearchBarEmpty
    }
    private lazy var searchController: UISearchController = {
        let searchController = UISearchController(searchResultsController: nil)
        searchController.searchResultsUpdater = self
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search Currencies"
        return searchController
    }()
        
    override func viewDidLoad() {
        super.viewDidLoad()
        readJson()
...
